--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,340 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navigation-bar {
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+.navigation-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navigation-header .sidebar-toggle-btn {
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 8px;
+  /* width: 30px;
+  height: 30px; */
+  color: azure;
+  font-size: 22px;
+  text-align: center;
+  display: none;
+}
+
+.navigation-bar .navigation-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 0px 150px; */
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-links li {
+  margin-right: 30px;
+}
+
+.nav-links li .link-btn {
+  background-color: transparent;
+  font-size: 18px;
+  border: none;
+  text-transform: capitalize;
+  font-weight: bold;
+  cursor: pointer;
+  color: azure;
+  height: 50px;
+  width: 150px;
+}
+
+.sign-in-btn-container .sign-in-btn {
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  background-color: black;
+  color: azure;
+  cursor: pointer;
+}
+
+/* .hero::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 65%;
+  top: 0;
+  left: 0;
+
+} */
+
+.hero {
+  background-image: url(./images/hero.svg);
+  background-repeat: no-repeat;
+  width: 100vw;
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+  margin-top: -8rem;
+  z-index: -1;
+}
+
+/* .hero::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 65%;
+  top: 0;
+  left: 0;
+  background: url(./images/hero.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.hero {
+  position: relative;
+  min-height: 100vh;
+  margin-top: -5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+} */
+
+.hero-center {
+  display: grid;
+  grid-template-columns: auto auto;
+  place-items: center;
+}
+
+.hero-info h1 {
+  font-size: 64px;
+  margin-left: 100px;
+  margin-top: 200px;
+}
+
+.hero-info p {
+  margin-left: 100px;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-bottom: 30px;
+  font-size: 22px;
+  color: gray;
+}
+
+.hero-info .btn {
+  margin-left: 100px;
+  padding: 8px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: black;
+  color: azure;
+  cursor: pointer;
+}
+
+
+.hero-images {
+  margin-top: 180px;
+  margin-right: 200px;
+}
+
+.sidebar-wrapper {
+  width: 0vw;
+  height: 0vh;
+  transition: all 0.5s;
+}
+
+.sidebar-wrapper .sidebar-links {
+  display: none;
+}
+
+.sidebar-wrapper button {
+  display: none;
+}
+
+.submenu {
+  visibility: hidden;
+}
+
+.submenu.show {
+  visibility: visible;
+  position: absolute;
+}
+
+.submenu::before {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid white;
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.submenu.show .submenu-container {
+  width: fit-content;
+  height: fit-content;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.submenu.show .submenu-container h4 {
+  text-transform: capitalize;
+  color: gray;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
+.submenu.show .submenu-container .submenu-center {
+  display: flex;
+}
+
+.submenu.show .submenu-container .submenu-center a {
+  text-decoration: none;
+  text-transform: capitalize;
+  color: steelblue;
+  margin-left: 20px;
+  margin-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.submenu.show .submenu-container .submenu-center a p {
+  margin-left: 30px;
+}
+
+
+@media only screen and (max-width: 780px) {
+  .navigation-bar {
+    width: 100vw;
+  }
+
+  .navigation-header {
+    width: 100vw;
+  }
+
+  .nav-links {
+    display: none;
+  }
+
+  .sign-in-btn-container {
+    display: none;
+  }
+
+  .navigation-header .sidebar-toggle-btn {
+    display: block;
+  }
+
+  .hero-images {
+    display: none;
+  }
+
+  .hero-info h1 {
+    font-size: 28px;
+    margin-left: 120px;
+    margin-top: 200px;
+  }
+
+  .hero-info p {
+    margin-left: 120px;
+    margin-top: 50px;
+    margin-right: 50px;
+    margin-bottom: 30px;
+    font-size: 12px;
+  }
+
+  .hero-info .btn {
+    margin-left: 120px;
+  }
+
+  .sidebar-wrapper {
+    width: 0vw;
+    height: 0vh;
+    transition: all 0.5s;
+  }
+
+
+  .sidebar-wrapper.show .sidebar {
+    width: 60%;
+    height: 90%;
+    background-color: whitesmoke;
+    transition: all 0.5s;
+    position: relative;
+  }
+
+  .sidebar-wrapper.show button {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    background-color: transparent;
+    transition: all 0.5s;
+    border: none;
+    font-size: 32px;
+    color: cadetblue;
+    cursor: pointer;
+  }
+
+  .sidebar-wrapper.show {
+    display: grid;
+    place-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: 5;
+    transition: all 0.5s;
+  }
+
+  .sidebar-wrapper.show .sidebar-links {
+    display: block;
+    padding: 150px 50px;
+  }
+
+  .sidebar-wrapper.show .sidebar-links article h4 {
+    text-transform: capitalize;
+    margin-bottom: 10px;
+  }
+
+  .sidebar-wrapper.show .sidebar-links article .sidebar-sublinks {
+    display: grid;
+    grid-template-columns: auto auto;
+    padding-bottom: 20px;
+  }
+
+  .sidebar-wrapper.show .sidebar-links article .sidebar-sublinks a {
+    text-decoration: none;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+    color: slategray;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: fit-content;
+  }
+
+  .sidebar-wrapper.show .sidebar-links article .sidebar-sublinks a p {
+    margin-left: 15px;
+  }
 }
